{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 145,
  "lineage": "0858fc1b-6f3d-522e-94be-9a3083a7c623",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tic-tac-toe-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342770701736:internet-gateway/igw-0a64b130b243b5df9",
            "id": "igw-0a64b130b243b5df9",
            "owner_id": "342770701736",
            "tags": {
              "Name": "tic-tac-toe-igw"
            },
            "tags_all": {
              "Name": "tic-tac-toe-igw"
            },
            "vpc_id": "vpc-09077b7eec55c1502"
          },
          "dependencies": [
            "module.network.aws_vpc.tic-tac-toe-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tic-tac-toe-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342770701736:route-table/rtb-08610de7484129cb2",
            "id": "rtb-08610de7484129cb2",
            "owner_id": "342770701736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a64b130b243b5df9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tic-tac-toe-rt"
            },
            "tags_all": {
              "Name": "tic-tac-toe-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09077b7eec55c1502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.tic-tac-toe-igw",
            "module.network.aws_vpc.tic-tac-toe-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tic-tac-toe-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02530633601f6c459",
            "route_table_id": "rtb-08610de7484129cb2",
            "subnet_id": "subnet-06945a5997a141662"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tic-tac-toe-igw",
            "module.network.aws_route_table.tic-tac-toe-rt",
            "module.network.aws_subnet.tic-tac-toe-subnet",
            "module.network.aws_vpc.tic-tac-toe-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tic-tac-toe-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342770701736:security-group/sg-0ad75718b5ec9a1b7",
            "description": "Security group for accessing application and ec2 via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad75718b5ec9a1b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tic-tac-toe-sg",
            "name_prefix": "",
            "owner_id": "342770701736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tic-tac-toe-sg"
            },
            "tags_all": {
              "Name": "tic-tac-toe-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09077b7eec55c1502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.tic-tac-toe-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tic-tac-toe-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342770701736:subnet/subnet-06945a5997a141662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06945a5997a141662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342770701736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tic-tac-toe-subnet"
            },
            "tags_all": {
              "Name": "tic-tac-toe-subnet"
            },
            "vpc_id": "vpc-09077b7eec55c1502"
          },
          "dependencies": [
            "module.network.aws_vpc.tic-tac-toe-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tic-tac-toe-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342770701736:vpc/vpc-09077b7eec55c1502",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0645dd0fa17056c93",
            "default_route_table_id": "rtb-03c335cf6221b3fcf",
            "default_security_group_id": "sg-0360dcdb2da4a633f",
            "dhcp_options_id": "dopt-00c4cd9778272a26f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09077b7eec55c1502",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c335cf6221b3fcf",
            "owner_id": "342770701736",
            "tags": {
              "Name": "tic-tac-toe-vpc"
            },
            "tags_all": {
              "Name": "tic-tac-toe-vpc"
            }
          }
        }
      ]
    }
  ]
}